RESOLVED FIXED88719
[BlackBerry] browser video player fullscreen mode (portrait) does not play well with viewport metatag - Controls are off screen so cannot exit fullscreen
https://bugs.webkit.org/show_bug.cgi?id=88719
Summary [BlackBerry] browser video player fullscreen mode (portrait) does not play we...
Antonio Gomes
Reported 2012-06-09 14:03:33 PDT
From PRzilla: +++ This PR was initially created as a clone of PR #162991 +++ This is essentially the same problem as PR158266 which was landed, but Antonio asked that continued problems be PR'd separately. Go to the following simple html5 video example on my server: (...) http://toolswinxp.ott.qnx.com/qvtest_meta.html In this case the fullscreen rectangle is the wrong size as well, but too skinny instead of too wide. (...)
Attachments
(committed r120009, r=rbuis) patch (3.15 KB, patch)
2012-06-09 16:38 PDT, Antonio Gomes
no flags
Antonio Gomes
Comment 1 2012-06-09 16:38:39 PDT
Created attachment 146720 [details] (committed r120009, r=rbuis) patch
Rob Buis
Comment 2 2012-06-11 07:09:59 PDT
Comment on attachment 146720 [details] (committed r120009, r=rbuis) patch Looks good.
Rob Buis
Comment 3 2012-06-11 07:10:35 PDT
Comment on attachment 146720 [details] (committed r120009, r=rbuis) patch View in context: https://bugs.webkit.org/attachment.cgi?id=146720&action=review > Source/WebKit/blackberry/ChangeLog:15 > + fullscreen, and webpage had viewport metatag set. Oh you may want to add the internal reviewer, good for future reference/blame :)
Note You need to log in before you can comment on or make changes to this bug.