browser video player fullscreen mode (portrait) does not play well with viewport metatag - Controls are off screen so cannot exit fullscreen https://bugs.webkit.org/show_bug.cgi?id=88719 PR #164026

Reviewed by Rob Buis.
Patch by Antonio Gomes <agomes@rim.com>

Instead of using WebPage's viewport size, which suffers from
dealing with transformed coordinates, viewport metatag changes,
etc, lets use WebCore::FrameView's visibleContentRect::Size::Width,
which abstract all these variations.

It fixes an overscale issue we were having when video player entered
fullscreen, and webpage had viewport metatag set.

* WebCoreSupport/ChromeClientBlackBerry.cpp:
(WebCore::ChromeClientBlackBerry::fullScreenRendererChanged):

Canonical link: https://commits.webkit.org/106642@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120009 268f45cc-cd09-0410-ab3c-d52691b4dbfc